# OpenGlEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.h  Game  Main.cpp  Makefile  OpenGLEngine.code-workspace  OpenGlEngine  README.md  TextureManager.h  basic_lighting.fs
Include/: shader_m.h  shader_s.h
Include/Engine/: Camera.h  Components.h  CreateObject.h  ECS.h  Initialization.h  LightObject.h  Movement.h
Include/Models/: mesh.h  model.h  shader.h
Include/glad/: glad.h
assets/: lamp.vs
assets/Shaders/: model_loading.fs  model_loading.vs
src/: Main.cpp  glad.c  shader_s.cpp  stb_image.cpp
src/Engine/: Camera.cpp  CreateObject.cpp  Initialization.cpp  LightObject.cpp  Movement.cpp
